--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,13 @@ file(GLOB_RECURSE shaders_src CONFIGURE_DEPENDS
 # 将 HLSL 文件添加到项目中，但不编译它们
 #set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.hlsl PROPERTIES HEADER_FILE_ONLY TRUE)
 
-#set(BINARY_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/target")
+set(BINARY_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/target")
 
 # set ouput folder
-#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_ROOT_DIR}/bin)
-#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BINARY_ROOT_DIR}/lib)
-#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BINARY_ROOT_DIR}/lib)
-#set(CMAKE_PDB_OUTPUT_DIRECTORY ${BINARY_ROOT_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_ROOT_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BINARY_ROOT_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BINARY_ROOT_DIR}/lib)
+set(CMAKE_PDB_OUTPUT_DIRECTORY ${BINARY_ROOT_DIR}/bin)
 set(Y_VK_THIRD_PARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ext")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ext/tinygltf)
